--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ListView</string>
+    <string name="item_selected_message">Y have selected item: %1$s</string>
+    <string name="btn_floating_label">label of floating button</string>
+    <string name="character_info">Character %1$s %2$d</string>
 </resources>
